--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@types/google.maps": "^3.58.1",
+    "@types/leaflet": "^1.9.17",
     "@types/mapbox-gl": "^3.4.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.4.10",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.477.0",
     "mapbox-gl": "^3.10.0",
     "next": "14.1.0",
@@ -33,6 +35,7 @@
     "react": "^18.2.0",
     "react-day-picker": "^9.6.3",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
   },
