--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "next-themes": "^0.4.6",
     "react": "^18.2.0",
     "react-day-picker": "^9.6.3",
-    "react-diff-viewer": "^3.1.1",
+    "react-diff-viewer-continued": "^3.4.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-syntax-highlighter": "^15.6.1",
